# rag-10M-docs-prod

./: .dockerignore  .env.example  .gitignore  README.md  prompt.txt  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
scripts/: ingest.py
src/rag_zero/: __init__.py  cli.py  config.py
src/rag_zero/agent/: __init__.py  generator.py  graph.py  nodes.py  policy.py  verifier.py
src/rag_zero/clients/: __init__.py  base.py  embedder_client.py  llm_client.py  local_hf_client.py  mem0_client.py  reranker_client.py  verifier_client.py
src/rag_zero/evaluation/: __init__.py  golden.py  metrics.py  scale_lab.py
src/rag_zero/infra/: __init__.py  logging.py  metrics.py  tracing.py
src/rag_zero/ingestion/: chunker.py  clean.py  contextualizer.py  dedup.py  indexer.py  loader.py
src/rag_zero/models/: __init__.py  domain.py  prompts.py
src/rag_zero/retrieval/: __init__.py  dense.py  fusion.py  hybrid.py  rerank.py  sparse.py
src/rag_zero/serving/: app.py  memory_routes.py  routes.py  schemas.py  service.py
tests/integration/: test_serving.py
tests/unit/: test_agent.py  test_agent_graph.py  test_evaluation.py  test_ingestion.py  test_mem0.py  test_retrieval.py
